kubernetes/apps/auth/authentik/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik
  namespace: auth
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Authentik
    gethomepage.dev/group: Services
    gethomepage.dev/icon: authentik.svg
    gethomepage.dev/description: Identity provider · External
    kustomize.toolkit.fluxcd.io/substitute: "true"
spec:
  hostnames:
    - "auth.${SECRET_DOMAIN}"
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: authentik-server
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
